--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/core": "^11.0.0",
     "@emotion/css": "^11.7.1",
     "@emotion/react": "^11.8.2",
     "@emotion/serialize": "^1.0.2",
@@ -18,6 +19,7 @@
     "react-dom": "^18.0.0",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
+    "recoil": "^0.7.2",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
@@ -46,6 +48,13 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^18.0.3"
+    "@babel/core": "^7.17.10",
+    "@babel/preset-env": "^7.17.10",
+    "@babel/preset-react": "^7.16.7",
+    "@emotion/babel-plugin": "^11.9.2",
+    "@emotion/babel-preset-css-prop": "^11.2.0",
+    "@types/react": "^18.0.3",
+    "babel-loader": "^8.2.5",
+    "webpack": "^5.72.1"
   }
 }
