--- a/package.json
+++ b/package.json
@@ -1,60 +1,59 @@
 {
-  "name": "foxolio-app",
-  "version": "0.1.0",
+  "name": "temp-workspace",
+  "version": "0.0.0",
+  "license": "MIT",
+  "scripts": {
+    "start": "nx serve",
+    "build": "nx build",
+    "test": "nx test"
+  },
   "private": true,
   "dependencies": {
-    "@emotion/core": "^11.0.0",
-    "@emotion/css": "^11.7.1",
-    "@emotion/react": "^11.8.2",
-    "@emotion/serialize": "^1.0.2",
-    "@emotion/styled": "^11.8.1",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.0.0",
-    "@testing-library/user-event": "^13.2.1",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.7.13",
-    "@types/react-dom": "^17.0.9",
-    "firebase": "^9.6.10",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-router-dom": "6",
-    "react-scripts": "5.0.0",
-    "recoil": "^0.7.2",
-    "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "core-js": "^3.6.5",
+    "eslint-plugin-prettier": "^4.0.0",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "regenerator-runtime": "0.13.7",
+    "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.10",
-    "@babel/preset-env": "^7.17.10",
-    "@babel/preset-react": "^7.16.7",
-    "@emotion/babel-plugin": "^11.9.2",
-    "@emotion/babel-preset-css-prop": "^11.2.0",
-    "@types/react": "^18.0.3",
-    "babel-loader": "^8.2.5",
-    "webpack": "^5.72.1"
+    "@craco/craco": "^6.4.3",
+    "@nrwl/cli": "14.1.5",
+    "@nrwl/cypress": "14.1.5",
+    "@nrwl/eslint-plugin-nx": "14.1.5",
+    "@nrwl/jest": "14.1.5",
+    "@nrwl/linter": "14.1.5",
+    "@nrwl/nx-cloud": "latest",
+    "@nrwl/react": "14.1.5",
+    "@nrwl/web": "14.1.5",
+    "@nrwl/workspace": "14.1.5",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "13.1.1",
+    "@types/jest": "27.4.1",
+    "@types/node": "16.11.7",
+    "@types/react": "18.0.8",
+    "@types/react-dom": "18.0.3",
+    "@typescript-eslint/eslint-plugin": "~5.18.0",
+    "@typescript-eslint/parser": "~5.18.0",
+    "babel-jest": "27.5.1",
+    "cypress": "^9.1.0",
+    "eslint": "~8.12.0",
+    "eslint-config-prettier": "8.1.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jsx-a11y": "6.5.1",
+    "eslint-plugin-react": "7.29.4",
+    "eslint-plugin-react-hooks": "4.5.0",
+    "jest": "27.5.1",
+    "jest-watch-typeahead": "^1.1.0",
+    "nx": "14.1.5",
+    "prettier": "^2.5.1",
+    "react-scripts": "^5.0.1",
+    "react-test-renderer": "18.1.0",
+    "ts-jest": "27.1.4",
+    "ts-node": "9.1.1",
+    "typescript": "~4.6.2",
+    "web-vitals": "^2.1.4"
   }
 }
