--- a/apps/reclicker/package.json
+++ b/apps/reclicker/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mui/material": "^5.10.9",
     "@emotion/core": "^11.0.0",
     "@emotion/css": "^11.7.1",
-    "@emotion/react": "^11.8.2",
+    "@emotion/react": "^11.10.4",
     "@emotion/serialize": "^1.0.2",
-    "@emotion/styled": "^11.8.1",
+    "@emotion/styled": "^11.10.4",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
